--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
 <script>
   const images = [
-    'agatha.png', // substitua pelos nomes/caminhos das suas fotos
-    'dayanne.jpg',
-    'leandro.png',
+    'https://github.com/lwcuiaba/jogo2/blob/main/AGATHA.png', // substitua pelos nomes/caminhos das suas fotos
+    'https://github.com/lwcuiaba/jogo2/blob/main/DAYANNE.jpg',
+    'https://github.com/lwcuiaba/jogo2/blob/main/LEANDRO.png',
   ];
 
   const game = document.getElementById('game');
