--- a/index.html
+++ b/index.html
@@ -1,45 +1,70 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" class="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jogo da Memória</title>
   <style>
-    * { box-sizing: border-box; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
-    body {
+    html, body {
+      height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #89f7fe, #66a6ff);
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      user-select: none;
-      overflow: hidden;
+    }
+
+    body.dark {
+      background: linear-gradient(135deg, #1e1e2f, #1b2745);
+      color: #f0f0f0;
+    }
+
+    body.light {
+      background: linear-gradient(135deg, #dce3e9, #ffffff);
+      color: #222;
+    }
+
+    #toggleTheme {
+      position: fixed;
+      top: 15px;
+      right: 20px;
+      background: #444;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 50%;
+      font-size: 18px;
+      cursor: pointer;
+      z-index: 1000;
+      transition: background 0.3s;
+    }
+
+    body.light #toggleTheme {
+      background: #ddd;
+      color: #000;
     }
 
     #game {
       width: 360px;
+      margin: auto;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 12px;
       padding: 20px;
-      background: rgba(255, 255, 255, 0.95);
       border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
-      position: relative;
-      z-index: 1;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      background: rgba(30, 30, 30, 0.9);
+    }
+
+    body.light #game {
+      background: rgba(255, 255, 255, 0.85);
     }
 
     .card {
       width: 75px;
       height: 75px;
       border-radius: 12px;
-      cursor: pointer;
       perspective: 600px;
+      cursor: pointer;
       transition: transform 0.2s ease;
-      position: relative;
     }
 
     .card:hover:not(.flipped) {
@@ -49,7 +74,7 @@
     .card-inner {
       width: 100%;
       height: 100%;
-      transition: transform 0.5s ease;
+      transition: transform 0.5s;
       transform-style: preserve-3d;
       position: relative;
     }
@@ -62,18 +87,24 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      backface-visibility: hidden;
       border-radius: 12px;
+      backface-visibility: hidden;
     }
 
     .card-front {
-      background: linear-gradient(135deg, #667eea, #764ba2);
+      background: linear-gradient(135deg, #3a3f5a, #2a2d3d);
+      color: #fff;
+      font-size: 32px;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 32px;
-      color: #fff;
-      border: 2px solid #fff;
+      border: 2px solid #444;
+    }
+
+    body.light .card-front {
+      background: linear-gradient(135deg, #eee, #ccc);
+      color: #222;
+      border: 2px solid #aaa;
     }
 
     .card-front::after {
@@ -81,14 +112,18 @@
     }
 
     .card-back {
-      background: #fff;
+      background: #222;
       transform: rotateY(180deg);
       display: flex;
       justify-content: center;
       align-items: center;
       overflow: hidden;
-      border: 2px solid #764ba2;
-      box-shadow: 0 0 10px rgba(118, 75, 162, 0.7);
+      border: 2px solid #667eea;
+      box-shadow: 0 0 10px rgba(102, 126, 234, 0.7);
+    }
+
+    body.light .card-back {
+      background: #fff;
     }
 
     .card-back img {
@@ -99,18 +134,24 @@
     }
 
     .matched {
-      animation: glow 0.6s ease-out;
+      animation: pulse 0.5s ease-out 2;
     }
 
-    @keyframes glow {
-      0% {
-        box-shadow: 0 0 0px rgba(0, 255, 0, 0.7);
-        transform: scale(1.1);
-      }
-      100% {
-        box-shadow: 0 0 20px rgba(0, 255, 0, 0.9);
-        transform: scale(1);
-      }
+    @keyframes pulse {
+      0% { transform: scale(1); box-shadow: 0 0 0px lime; }
+      50% { transform: scale(1.15); box-shadow: 0 0 25px lime; }
+      100% { transform: scale(1); box-shadow: 0 0 0px lime; }
+    }
+
+    .shake {
+      animation: shake 0.4s;
+    }
+
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
     }
 
     #victory {
@@ -119,21 +160,25 @@
       left: 0;
       width: 360px;
       height: 100%;
-      background: rgba(255,255,255,0.95);
       border-radius: 16px;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      z-index: 10;
+      background: rgba(20, 20, 20, 0.95);
       opacity: 0;
       pointer-events: none;
+      z-index: 10;
       animation: fadeIn 1s ease forwards;
+    }
+
+    body.light #victory {
+      background: rgba(255, 255, 255, 0.9);
+      color: #000;
     }
 
     #victory h1 {
       font-size: 28px;
-      color: #333;
       margin-bottom: 20px;
     }
 
@@ -145,7 +190,6 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
     @keyframes fadeIn {
@@ -154,125 +198,195 @@
         pointer-events: all;
       }
     }
+
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 20;
+    }
   </style>
 </head>
-<body>
+<body class="dark">
 
-  <div id="game"></div>
+<button id="toggleTheme" onclick="toggleTheme()">🌙</button>
+<div id="game"></div>
+<div id="victory" style="display: none;">
+  <h1>🎉 Parabéns! Você venceu! 🎉</h1>
+  <button onclick="init()">Jogar Novamente</button>
+</div>
+<canvas id="confetti"></canvas>
 
-  <div id="victory" style="display: none;">
-    <h1>🎉 Parabéns! Você venceu! 🎉</h1>
-    <button onclick="init()">Jogar Novamente</button>
-  </div>
+<!-- Sons -->
+<audio id="flipSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_c38d5bfa41.mp3"></audio>
+<audio id="matchSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_8d5c64dc61.mp3"></audio>
+<audio id="failSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_45ad1b26ab.mp3"></audio>
+<audio id="winSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_3372d0c287.mp3"></audio>
 
-  <!-- Efeitos Sonoros -->
-  <audio id="flipSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_c38d5bfa41.mp3"></audio>
-  <audio id="matchSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_8d5c64dc61.mp3"></audio>
-  <audio id="failSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_45ad1b26ab.mp3"></audio>
-  <audio id="winSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_3372d0c287.mp3"></audio>
+<script>
+const images = [
+  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/AGATHA.png',
+  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/DAYANNE.jpg',
+  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/LOLA.jpeg',
+  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/AMORA.jpeg',
+  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/MIGUEL.jpeg',
+  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/FEFE.jpeg',
+  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/MIA.jpeg',
+  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/LEANDRO.png',
+];
 
-  <script>
-    const images = [
-      'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/AGATHA.png',
-      'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/DAYANNE.jpg',
-      'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/LOLA.jpeg',
-      'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/AMORA.jpeg',
-      'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/MIGUEL.jpeg',
-      'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/FEFE.jpeg',
-      'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/MIA.jpeg',
-      'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/LEANDRO.png',
-    ];
+const game = document.getElementById('game');
+const victoryScreen = document.getElementById('victory');
+const canvas = document.getElementById('confetti');
+const ctx = canvas.getContext('2d');
+const html = document.documentElement;
+const body = document.body;
 
-    const game = document.getElementById('game');
-    const victoryScreen = document.getElementById('victory');
+const flipSound = document.getElementById('flipSound');
+const matchSound = document.getElementById('matchSound');
+const failSound = document.getElementById('failSound');
+const winSound = document.getElementById('winSound');
 
-    const flipSound = document.getElementById('flipSound');
-    const matchSound = document.getElementById('matchSound');
-    const failSound = document.getElementById('failSound');
-    const winSound = document.getElementById('winSound');
+let cardsArray = [];
+let flippedCards = [];
+let matchedCount = 0;
 
-    let cardsArray = [];
-    let flippedCards = [];
-    let matchedCount = 0;
+function shuffle(array) {
+  for(let i = array.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
+  return array;
+}
 
-    function shuffle(array) {
-      for(let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
-      }
-      return array;
+function createCard(src, index) {
+  const card = document.createElement('div');
+  card.classList.add('card');
+  card.dataset.image = src;
+  card.dataset.index = index;
+
+  card.innerHTML = `
+    <div class="card-inner">
+      <div class="card-front"></div>
+      <div class="card-back"><img src="${src}" alt="imagem"/></div>
+    </div>
+  `;
+
+  card.addEventListener('click', () => {
+    if (flippedCards.length < 2 && !card.classList.contains('flipped')) {
+      card.classList.add('flipped');
+      flippedCards.push(card);
+      flipSound.currentTime = 0;
+      flipSound.play();
+      if (flippedCards.length === 2) checkMatch();
     }
+  });
 
-    function createCard(src, index) {
-      const card = document.createElement('div');
-      card.classList.add('card');
-      card.dataset.image = src;
-      card.dataset.index = index;
+  return card;
+}
 
-      card.innerHTML = `
-        <div class="card-inner">
-          <div class="card-front"></div>
-          <div class="card-back"><img src="${src}" alt="imagem"/></div>
-        </div>
-      `;
+function checkMatch() {
+  const [card1, card2] = flippedCards;
 
-      card.addEventListener('click', () => {
-        if (flippedCards.length < 2 && !card.classList.contains('flipped')) {
-          card.classList.add('flipped');
-          flippedCards.push(card);
-          flipSound.currentTime = 0;
-          flipSound.play();
+  if (card1.dataset.image === card2.dataset.image) {
+    card1.classList.add('matched');
+    card2.classList.add('matched');
+    matchedCount += 2;
+    flippedCards = [];
+    matchSound.currentTime = 0;
+    matchSound.play();
 
-          if (flippedCards.length === 2) checkMatch();
-        }
-      });
-
-      return card;
+    if (matchedCount === cardsArray.length) {
+      setTimeout(() => {
+        victoryScreen.style.display = 'flex';
+        winSound.currentTime = 0;
+        winSound.play();
+        startConfetti();
+      }, 600);
     }
-
-    function checkMatch() {
-      const [card1, card2] = flippedCards;
-
-      if (card1.dataset.image === card2.dataset.image) {
-        card1.classList.add('matched');
-        card2.classList.add('matched');
-        matchedCount += 2;
-        flippedCards = [];
-        matchSound.currentTime = 0;
-        matchSound.play();
-
-        if (matchedCount === cardsArray.length) {
-          setTimeout(() => {
-            victoryScreen.style.display = 'flex';
-            winSound.currentTime = 0;
-            winSound.play();
-          }, 600);
-        }
-      } else {
-        setTimeout(() => {
-          card1.classList.remove('flipped');
-          card2.classList.remove('flipped');
-          flippedCards = [];
-        }, 1000);
-        failSound.currentTime = 0;
-        failSound.play();
-      }
-    }
-
-    function init() {
-      matchedCount = 0;
+  } else {
+    card1.classList.add('shake');
+    card2.classList.add('shake');
+    failSound.currentTime = 0;
+    failSound.play();
+    setTimeout(() => {
+      card1.classList.remove('flipped', 'shake');
+      card2.classList.remove('flipped', 'shake');
       flippedCards = [];
-      cardsArray = shuffle([...images, ...images]);
-      game.innerHTML = '';
-      victoryScreen.style.display = 'none';
+    }, 800);
+  }
+}
 
-      cardsArray.forEach((img, i) => {
-        const card = createCard(img, i);
-        game.appendChild(card);
-      });
-    }
+function init() {
+  matchedCount = 0;
+  flippedCards = [];
+  cardsArray = shuffle([...images, ...images]);
+  game.innerHTML = '';
+  victoryScreen.style.display = 'none';
+  stopConfetti();
 
-    init();
-  </script>
+  cardsArray.forEach((img, i) => {
+    const card = createCard(img, i);
+    game.appendChild(card);
+  });
+}
+
+function toggleTheme() {
+  const isDark = body.classList.contains('dark');
+  body.classList.toggle('dark', !isDark);
+  body.classList.toggle('light', isDark);
+  document.getElementById('toggleTheme').textContent = isDark ? '🌞' : '🌙';
+}
+
+// Confetti
+let confettiPieces = [];
+
+function startConfetti() {
+  resizeCanvas();
+  confettiPieces = Array.from({ length: 150 }, () => ({
+    x: Math.random() * canvas.width,
+    y: Math.random() * canvas.height - canvas.height,
+    r: Math.random() * 6 + 4,
+    d: Math.random() * 40 + 10,
+    color: `hsl(${Math.random() * 360}, 70%, 60%)`,
+    tilt: Math.random() * 10 - 10,
+    tiltAngle: 0,
+    tiltAngleIncrement: Math.random() * 0.07 + 0.05,
+  }));
+  animateConfetti();
+}
+
+function animateConfetti() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  confettiPieces.forEach(p => {
+    p.tiltAngle += p.tiltAngleIncrement;
+    p.y += (Math.cos(p.d) + 3 + p.r / 2) * 0.5;
+    p.tilt = Math.sin(p.tiltAngle) * 15;
+    ctx.beginPath();
+    ctx.lineWidth = p.r;
+    ctx.strokeStyle = p.color;
+    ctx.moveTo(p.x + p.tilt, p.y);
+    ctx.lineTo(p.x + p.tilt + p.r / 2, p.y + p.r);
+    ctx.stroke();
+  });
+  confettiPieces = confettiPieces.filter(p => p.y < canvas.height);
+  if (confettiPieces.length > 0) requestAnimationFrame(animateConfetti);
+}
+
+function stopConfetti() {
+  confettiPieces = [];
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+}
+
+function resizeCanvas() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+
+window.addEventListener('resize', resizeCanvas);
+init();
+</script>
+
 </body>
 </html>
