--- a/index.html
+++ b/index.html
@@ -1,391 +1,212 @@
 <!DOCTYPE html>
-<html lang="pt-BR" class="dark">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jogo da Memória</title>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-
-    html, body {
-      height: 100%;
+    body {
+      margin: 0;
+      height: 100vh;
+      background: linear-gradient(135deg, #1f1f1f, #3a3a3a);
       font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      user-select: none;
     }
-
-    body.dark {
-      background: linear-gradient(135deg, #1e1e2f, #1b2745);
-      color: #f0f0f0;
-    }
-
-    body.light {
-      background: linear-gradient(135deg, #dce3e9, #ffffff);
-      color: #222;
-    }
-
-    #toggleTheme {
-      position: fixed;
-      top: 15px;
-      right: 20px;
-      background: #444;
-      color: white;
-      border: none;
-      padding: 10px;
-      border-radius: 50%;
-      font-size: 18px;
-      cursor: pointer;
-      z-index: 1000;
-      transition: background 0.3s;
-    }
-
-    body.light #toggleTheme {
-      background: #ddd;
-      color: #000;
-    }
-
     #game {
-      width: 360px;
-      margin: auto;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 12px;
       padding: 20px;
+      background: rgba(40, 40, 40, 0.95);
       border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-      background: rgba(30, 30, 30, 0.9);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.6);
     }
-
-    body.light #game {
-      background: rgba(255, 255, 255, 0.85);
-    }
-
     .card {
       width: 75px;
       height: 75px;
-      border-radius: 12px;
       perspective: 600px;
       cursor: pointer;
-      transition: transform 0.2s ease;
+      border-radius: 12px;
     }
-
-    .card:hover:not(.flipped) {
-      transform: scale(1.05);
-    }
-
     .card-inner {
       width: 100%;
       height: 100%;
-      transition: transform 0.5s;
-      transform-style: preserve-3d;
       position: relative;
+      transform-style: preserve-3d;
+      transition: transform 0.5s;
+      border-radius: 12px;
     }
-
     .card.flipped .card-inner {
       transform: rotateY(180deg);
     }
-
     .card-front, .card-back {
       position: absolute;
       width: 100%;
       height: 100%;
-      border-radius: 12px;
       backface-visibility: hidden;
-    }
-
-    .card-front {
-      background: linear-gradient(135deg, #3a3f5a, #2a2d3d);
-      color: #fff;
-      font-size: 32px;
+      border-radius: 12px;
       display: flex;
       justify-content: center;
       align-items: center;
-      border: 2px solid #444;
     }
-
-    body.light .card-front {
-      background: linear-gradient(135deg, #eee, #ccc);
-      color: #222;
-      border: 2px solid #aaa;
+    .card-front {
+      background: #292929;
+      border: 2px solid #555;
+      color: #fff;
+      font-size: 32px;
     }
-
     .card-front::after {
       content: "❓";
     }
-
     .card-back {
-      background: #222;
-      transform: rotateY(180deg);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-      border: 2px solid #667eea;
-      box-shadow: 0 0 10px rgba(102, 126, 234, 0.7);
-    }
-
-    body.light .card-back {
       background: #fff;
+      transform: rotateY(180deg);
+      overflow: hidden;
+      border: 2px solid #666;
     }
-
     .card-back img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       border-radius: 10px;
     }
-
     .matched {
-      animation: pulse 0.5s ease-out 2;
+      animation: pulse 0.6s ease;
+      box-shadow: 0 0 0 3px lime inset;
     }
-
     @keyframes pulse {
-      0% { transform: scale(1); box-shadow: 0 0 0px lime; }
-      50% { transform: scale(1.15); box-shadow: 0 0 25px lime; }
-      100% { transform: scale(1); box-shadow: 0 0 0px lime; }
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
     }
-
-    .shake {
-      animation: shake 0.4s;
+    .wrong {
+      box-shadow: 0 0 0 3px red inset;
+      border-color: red !important;
     }
-
-    @keyframes shake {
-      0%, 100% { transform: translateX(0); }
-      25% { transform: translateX(-5px); }
-      50% { transform: translateX(5px); }
-      75% { transform: translateX(-5px); }
-    }
-
-    #victory {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 360px;
+    #confetti-canvas {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
       height: 100%;
-      border-radius: 16px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      background: rgba(20, 20, 20, 0.95);
-      opacity: 0;
       pointer-events: none;
-      z-index: 10;
-      animation: fadeIn 1s ease forwards;
-    }
-
-    body.light #victory {
-      background: rgba(255, 255, 255, 0.9);
-      color: #000;
-    }
-
-    #victory h1 {
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
-
-    #victory button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #667eea;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-        pointer-events: all;
-      }
-    }
-
-    canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      pointer-events: none;
-      z-index: 20;
+      z-index: 999;
     }
   </style>
 </head>
-<body class="dark">
+<body>
 
-<button id="toggleTheme" onclick="toggleTheme()">🌙</button>
+<canvas id="confetti-canvas"></canvas>
 <div id="game"></div>
-<div id="victory" style="display: none;">
-  <h1>🎉 Parabéns! Você venceu! 🎉</h1>
-  <button onclick="init()">Jogar Novamente</button>
-</div>
-<canvas id="confetti"></canvas>
 
-<!-- Sons -->
-<audio id="flipSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_c38d5bfa41.mp3"></audio>
-<audio id="matchSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_8d5c64dc61.mp3"></audio>
-<audio id="failSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_45ad1b26ab.mp3"></audio>
-<audio id="winSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_3372d0c287.mp3"></audio>
+<audio id="match-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-video-game-treasure-2066.mp3"></audio>
+<audio id="fail-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-wrong-answer-fail-notification-946.mp3"></audio>
+<audio id="win-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-game-level-completed-2059.mp3"></audio>
 
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script>
-const images = [
-  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/AGATHA.png',
-  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/DAYANNE.jpg',
-  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/LOLA.jpeg',
-  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/AMORA.jpeg',
-  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/MIGUEL.jpeg',
-  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/FEFE.jpeg',
-  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/MIA.jpeg',
-  'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/LEANDRO.png',
-];
+  const images = [
+    'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/AGATHA.png',
+    'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/DAYANNE.jpg',
+    'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/LOLA.jpeg',
+    'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/AMORA.jpeg',
+    'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/MIGUEL.jpeg',
+    'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/FEFE.jpeg',
+    'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/MIA.jpeg',
+    'https://raw.githubusercontent.com/lwcuiaba/jogo2/main/LEANDRO.png'
+  ];
 
-const game = document.getElementById('game');
-const victoryScreen = document.getElementById('victory');
-const canvas = document.getElementById('confetti');
-const ctx = canvas.getContext('2d');
-const html = document.documentElement;
-const body = document.body;
+  const game = document.getElementById('game');
+  const matchSound = document.getElementById('match-sound');
+  const failSound = document.getElementById('fail-sound');
+  const winSound = document.getElementById('win-sound');
+  let cardsArray = [...images, ...images];
+  let flippedCards = [];
+  let matchedCount = 0;
 
-const flipSound = document.getElementById('flipSound');
-const matchSound = document.getElementById('matchSound');
-const failSound = document.getElementById('failSound');
-const winSound = document.getElementById('winSound');
-
-let cardsArray = [];
-let flippedCards = [];
-let matchedCount = 0;
-
-function shuffle(array) {
-  for(let i = array.length - 1; i > 0; i--) {
-    const j = Math.floor(Math.random() * (i + 1));
-    [array[i], array[j]] = [array[j], array[i]];
+  function shuffle(array) {
+    for(let i = array.length -1; i > 0; i--) {
+      const j = Math.floor(Math.random() * (i+1));
+      [array[i], array[j]] = [array[j], array[i]];
+    }
+    return array;
   }
-  return array;
-}
 
-function createCard(src, index) {
-  const card = document.createElement('div');
-  card.classList.add('card');
-  card.dataset.image = src;
-  card.dataset.index = index;
+  function createCard(src, index) {
+    const card = document.createElement('div');
+    card.classList.add('card');
+    card.dataset.image = src;
+    card.dataset.index = index;
 
-  card.innerHTML = `
-    <div class="card-inner">
-      <div class="card-front"></div>
-      <div class="card-back"><img src="${src}" alt="imagem"/></div>
-    </div>
-  `;
+    card.innerHTML = `
+      <div class="card-inner">
+        <div class="card-front"></div>
+        <div class="card-back"><img src="${src}" alt="imagem"/></div>
+      </div>
+    `;
 
-  card.addEventListener('click', () => {
-    if (flippedCards.length < 2 && !card.classList.contains('flipped')) {
-      card.classList.add('flipped');
-      flippedCards.push(card);
-      flipSound.currentTime = 0;
-      flipSound.play();
-      if (flippedCards.length === 2) checkMatch();
-    }
-  });
+    card.addEventListener('click', () => {
+      if (flippedCards.length < 2 && !card.classList.contains('flipped')) {
+        card.classList.add('flipped');
+        flippedCards.push(card);
 
-  return card;
-}
+        if (flippedCards.length === 2) {
+          checkMatch();
+        }
+      }
+    });
 
-function checkMatch() {
-  const [card1, card2] = flippedCards;
+    return card;
+  }
 
-  if (card1.dataset.image === card2.dataset.image) {
-    card1.classList.add('matched');
-    card2.classList.add('matched');
-    matchedCount += 2;
-    flippedCards = [];
-    matchSound.currentTime = 0;
-    matchSound.play();
-
-    if (matchedCount === cardsArray.length) {
-      setTimeout(() => {
-        victoryScreen.style.display = 'flex';
-        winSound.currentTime = 0;
-        winSound.play();
-        startConfetti();
-      }, 600);
-    }
-  } else {
-    card1.classList.add('shake');
-    card2.classList.add('shake');
-    failSound.currentTime = 0;
-    failSound.play();
-    setTimeout(() => {
-      card1.classList.remove('flipped', 'shake');
-      card2.classList.remove('flipped', 'shake');
+  function checkMatch() {
+    const [card1, card2] = flippedCards;
+    if (card1.dataset.image === card2.dataset.image) {
+      card1.classList.add('matched');
+      card2.classList.add('matched');
+      matchSound.currentTime = 0;
+      matchSound.play();
       flippedCards = [];
-    }, 800);
+      matchedCount += 2;
+      if (matchedCount === cardsArray.length) {
+        winSound.play();
+        setTimeout(() => {
+          confetti({
+            particleCount: 200,
+            spread: 100,
+            origin: { y: 0.6 }
+          });
+          alert('🎉 Parabéns! Você encontrou todos os pares!');
+        }, 600);
+      }
+    } else {
+      card1.classList.add('wrong');
+      card2.classList.add('wrong');
+      failSound.currentTime = 0;
+      failSound.play();
+      setTimeout(() => {
+        card1.classList.remove('flipped', 'wrong');
+        card2.classList.remove('flipped', 'wrong');
+        flippedCards = [];
+      }, 800);
+    }
   }
-}
 
-function init() {
-  matchedCount = 0;
-  flippedCards = [];
-  cardsArray = shuffle([...images, ...images]);
-  game.innerHTML = '';
-  victoryScreen.style.display = 'none';
-  stopConfetti();
+  function init() {
+    matchedCount = 0;
+    flippedCards = [];
+    game.innerHTML = '';
+    cardsArray = shuffle(cardsArray);
+    cardsArray.forEach((img, i) => {
+      const card = createCard(img, i);
+      game.appendChild(card);
+    });
+  }
 
-  cardsArray.forEach((img, i) => {
-    const card = createCard(img, i);
-    game.appendChild(card);
-  });
-}
-
-function toggleTheme() {
-  const isDark = body.classList.contains('dark');
-  body.classList.toggle('dark', !isDark);
-  body.classList.toggle('light', isDark);
-  document.getElementById('toggleTheme').textContent = isDark ? '🌞' : '🌙';
-}
-
-// Confetti
-let confettiPieces = [];
-
-function startConfetti() {
-  resizeCanvas();
-  confettiPieces = Array.from({ length: 150 }, () => ({
-    x: Math.random() * canvas.width,
-    y: Math.random() * canvas.height - canvas.height,
-    r: Math.random() * 6 + 4,
-    d: Math.random() * 40 + 10,
-    color: `hsl(${Math.random() * 360}, 70%, 60%)`,
-    tilt: Math.random() * 10 - 10,
-    tiltAngle: 0,
-    tiltAngleIncrement: Math.random() * 0.07 + 0.05,
-  }));
-  animateConfetti();
-}
-
-function animateConfetti() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  confettiPieces.forEach(p => {
-    p.tiltAngle += p.tiltAngleIncrement;
-    p.y += (Math.cos(p.d) + 3 + p.r / 2) * 0.5;
-    p.tilt = Math.sin(p.tiltAngle) * 15;
-    ctx.beginPath();
-    ctx.lineWidth = p.r;
-    ctx.strokeStyle = p.color;
-    ctx.moveTo(p.x + p.tilt, p.y);
-    ctx.lineTo(p.x + p.tilt + p.r / 2, p.y + p.r);
-    ctx.stroke();
-  });
-  confettiPieces = confettiPieces.filter(p => p.y < canvas.height);
-  if (confettiPieces.length > 0) requestAnimationFrame(animateConfetti);
-}
-
-function stopConfetti() {
-  confettiPieces = [];
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-}
-
-function resizeCanvas() {
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-}
-
-window.addEventListener('resize', resizeCanvas);
-init();
+  init();
 </script>
 
 </body>
