--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         winSound.play();
         setTimeout(() => {
           fireWinConfetti();
-          alert('🎉 Parabéns! Você encontrou todos os pares!');
+          // removido alert de parabéns
         }, 600);
       }
     } else {
