--- a/index.html
+++ b/index.html
@@ -1,3 +1,161 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jogo da Memória - Fases</title>
+  <style>
+    :root {
+      --bg: #1f1f1f;
+      --card-front: #292929;
+      --card-border: #555;
+      --text-color: #fff;
+      --board-bg: rgba(40, 40, 40, 0.95);
+    }
+    body.light {
+      --bg: #e2e2e2;
+      --card-front: #f0f0f0;
+      --card-border: #aaa;
+      --text-color: #000;
+      --board-bg: rgba(255, 255, 255, 0.95);
+    }
+    body {
+      margin: 0;
+      height: 100vh;
+      background: var(--bg);
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: var(--text-color);
+      user-select: none;
+      transition: background 0.3s;
+      flex-direction: column;
+    }
+    #toggle-theme, #next-phase {
+      position: absolute;
+      top: 20px;
+      padding: 8px 16px;
+      border: none;
+      border-radius: 8px;
+      background: #666;
+      color: #fff;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    #toggle-theme { right: 20px; }
+    #next-phase { left: 20px; }
+
+    body.light button {
+      background: #ddd;
+      color: #000;
+    }
+
+    #game {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 12px;
+      padding: 20px;
+      background: var(--board-bg);
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.6);
+    }
+
+    .card {
+      width: 75px;
+      height: 75px;
+      perspective: 600px;
+      cursor: pointer;
+      border-radius: 12px;
+    }
+
+    .card-inner {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+      transition: transform 0.5s;
+      border-radius: 12px;
+    }
+
+    .card.flipped .card-inner {
+      transform: rotateY(180deg);
+    }
+
+    .card-front, .card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      border-radius: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .card-front {
+      background: var(--card-front);
+      border: 2px solid var(--card-border);
+      font-size: 32px;
+      color: var(--text-color);
+    }
+
+    .card-front::after {
+      content: "❓";
+    }
+
+    .card-back {
+      background: #fff;
+      transform: rotateY(180deg);
+      overflow: hidden;
+      border: 2px solid #666;
+    }
+
+    .card-back img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .matched {
+      animation: pulse 0.6s ease;
+      box-shadow: 0 0 0 3px lime inset;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+
+    .wrong {
+      box-shadow: 0 0 0 3px red inset;
+      border-color: red !important;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 999;
+    }
+  </style>
+</head>
+<body class="dark">
+
+<button id="toggle-theme">Alternar Tema</button>
+<button id="next-phase">Próxima Fase</button>
+<canvas id="confetti-canvas"></canvas>
+<div id="game"></div>
+
+<audio id="match-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-video-game-treasure-2066.mp3"></audio>
+<audio id="fail-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-wrong-answer-fail-notification-946.mp3"></audio>
+<audio id="win-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-game-level-completed-2059.mp3"></audio>
+
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script>
   const allImages = {
@@ -62,7 +220,7 @@
     `;
 
     card.addEventListener('click', () => {
-      if (flippedCards.length < 2 && !card.classList.contains('flipped')) {
+      if (flippedCards.length < 2 && !card.classList.contains('flipped') && !card.classList.contains('matched')) {
         card.classList.add('flipped');
         flippedCards.push(card);
         if (flippedCards.length === 2) checkMatch();
@@ -80,23 +238,39 @@
     confetti({ particleCount: 200, spread: 100, origin: { y: 0.6 } });
   }
 
-  function mostrarMensagemDeVitoria(texto) {
-    const div = document.createElement('div');
-    div.textContent = texto;
-    div.style.position = 'fixed';
-    div.style.top = '50%';
-    div.style.left = '50%';
-    div.style.transform = 'translate(-50%, -50%)';
-    div.style.fontSize = '36px';
-    div.style.background = 'rgba(0,0,0,0.8)';
-    div.style.color = 'white';
-    div.style.padding = '20px 40px';
-    div.style.borderRadius = '16px';
-    div.style.zIndex = '1000';
-    document.body.appendChild(div);
+  function mostrarAnimacaoDeVitoria(texto) {
+    const overlay = document.createElement('div');
+    overlay.style.position = 'fixed';
+    overlay.style.top = 0;
+    overlay.style.left = 0;
+    overlay.style.width = '100%';
+    overlay.style.height = '100%';
+    overlay.style.background = 'rgba(0,0,0,0.7)';
+    overlay.style.display = 'flex';
+    overlay.style.justifyContent = 'center';
+    overlay.style.alignItems = 'center';
+    overlay.style.zIndex = 1000;
+
+    const msg = document.createElement('div');
+    msg.textContent = texto;
+    msg.style.fontSize = '48px';
+    msg.style.padding = '30px 50px';
+    msg.style.background = '#fff';
+    msg.style.color = '#222';
+    msg.style.borderRadius = '20px';
+    msg.style.boxShadow = '0 0 20px #fff';
+    msg.style.transform = 'scale(0.5)';
+    msg.style.transition = 'transform 0.5s ease';
+
+    overlay.appendChild(msg);
+    document.body.appendChild(overlay);
 
     setTimeout(() => {
-      div.remove();
+      msg.style.transform = 'scale(1)';
+    }, 50);
+
+    setTimeout(() => {
+      overlay.remove();
     }, 2500);
   }
 
@@ -116,13 +290,13 @@
         fireWinConfetti();
 
         if (faseAtual < fases.length - 1) {
-          mostrarMensagemDeVitoria("🎉 Fase Concluída!");
+          mostrarAnimacaoDeVitoria("🎉 Fase Concluída!");
           setTimeout(() => {
             faseAtual++;
             iniciarFase();
           }, 3000);
         } else {
-          mostrarMensagemDeVitoria("🏁 Você venceu todas as fases!");
+          mostrarAnimacaoDeVitoria("🏁 Você venceu todas as fases!");
         }
       }
     } else {
@@ -134,7 +308,7 @@
         card1.classList.remove('flipped', 'wrong');
         card2.classList.remove('flipped', 'wrong');
         flippedCards = [];
-      }, 800);
+      }, 1000); // Tempo de erro reduzido
     }
   }
 
@@ -152,3 +326,6 @@
 
   iniciarFase();
 </script>
+
+</body>
+</html>
