--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ function obterNomeFalado(src) {
     case allImages.AGATHA: return "ágata";
     case allImages.DAYANNE: return "mamãe";
     case allImages.LEANDRO: return "papai";
-    case allImages.LOLA: return "lola";
+    case allImages.LOLA: return "lolinha";
     case allImages.AMORA: return "amora";
     case allImages.MIGUEL: return "miguel";
     case allImages.FEFE: return "fefê";
